--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -51,8 +51,10 @@ jobs:
     # - run: npm test
 
   deployApp:
+    needs: [ buildClient, buildServer ]
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Copy repo via ssh
         uses: garygrossgarten/github-action-scp@release
         with:
