--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,8 +25,14 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
+    - run: |
+        npm ci
+        npm run build --if-present
+    - name: Archive server artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: server-artifact
+        path: dist
     # - run: npm run lint
     # - run: npm test
 
@@ -44,34 +50,56 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
+    - run: |
+        npm ci
+        npm run build --if-present
     # Disabled because linter is broken on client
     # - run: npm run lint
     # - run: npm test
+
 
   deployApp:
     needs: [ buildClient, buildServer ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Copy repo via ssh
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: server-artifact
+          path: dist-artifact
+      - name: Copy via scp
         uses: garygrossgarten/github-action-scp@release
         with:
-          local: .
+          local: dist-artifact/server-artifact
           remote: esidom
           host: ${{ secrets.DEPLOY_HOST }}
           username: ${{ secrets.DEPLOY_USER }}
           password: ${{ secrets.DEPLOY_PASSWORD }}
           dotfiles: true
-      - name: Build and launch docker image
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.DEPLOY_HOST }}
-          username: ${{ secrets.DEPLOY_USER }}
-          password: ${{ secrets.DEPLOY_PASSWORD }}
-          script: |
-            cd esidom
-            docker build -t esidom .
-            docker rm -f esidom
-            docker run -p 8080:8080 -p 3000:3000 -d --name esidom esidom
+
+  # deployApp:
+  #   needs: [ buildClient, buildServer ]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Copy repo via ssh
+  #       uses: garygrossgarten/github-action-scp@release
+  #       with:
+  #         local: .
+  #         remote: esidom
+  #         host: ${{ secrets.DEPLOY_HOST }}
+  #         username: ${{ secrets.DEPLOY_USER }}
+  #         password: ${{ secrets.DEPLOY_PASSWORD }}
+  #         dotfiles: true
+  #     - name: Build and launch docker image
+  #       uses: appleboy/ssh-action@master
+  #       with:
+  #         host: ${{ secrets.DEPLOY_HOST }}
+  #         username: ${{ secrets.DEPLOY_USER }}
+  #         password: ${{ secrets.DEPLOY_PASSWORD }}
+  #         script: |
+  #           cd esidom
+  #           docker build -t esidom .
+  #           docker rm -f esidom
+  #           docker run -p 8080:8080 -p 3000:3000 -d --name esidom esidom
