--- a/client/package.json
+++ b/client/package.json
@@ -25,8 +25,11 @@
     "dependencies": {
         "http-server": "^0.12.3"
     },
-    "devDependencies": { 
+    "devDependencies": {
         "@typescript-eslint/typescript-estree": "^4.14.1",
+        "blockly": "^4.20201217.0",
+        "debug": "^4.3.1",
+        "eslint-svelte3-preprocess": "0.0.4",
         "node-sass": "^5.0.0",
         "snowpack": "^2.17.0",
         "socket.io": "^3.1.1",
@@ -34,8 +37,6 @@
         "svelte": "^3.24.0",
         "svelte-color-picker": "^1.0.7",
         "svelte-spa-router": "^3.1.0",
-        "debug": "^4.3.1",
-        "eslint-svelte3-preprocess": "0.0.4",
         "@snowpack/app-scripts-svelte": "^1.9.2",
         "@snowpack/plugin-dotenv": "^2.0.4",
         "@snowpack/plugin-svelte": "^3.3.1",
